css/styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html {
    font-size: 100%;
}

:root {
    --accent: #5f503e;
    --background: #aab7bf;
    --text: #261201;
}

@media (prefers-color-scheme: dark) {
    :root {
        --accent: #d9d2c6;
        --background: #3b4b59;
        --text: #e0e4e1;
    }
}

body {
    background: var(--background);
    color: var(--text);
    font-family: "Work Sans", sans-serif;
    padding: 2.5rem; /* 40px */
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

.container {
    max-width: 640px;
    margin: 0 auto;
    flex: 1;
    display: flex;
    flex-direction: column;
    width: 100%;
}

main {
    flex: 1;
}

a {
    color: var(--accent);
    text-decoration: none;
    transition: opacity 150ms ease-in-out;
}

a:hover {
    opacity: 0.8;
}

h1 {
    font-size: 2rem; /* 32px */
    font-weight: 400;
}

h2 {
    font-size: 1.125rem; /* 18px */
    font-weight: 400;
    margin-bottom: 1rem;
}

.header {
    margin-bottom: 1.75rem; /* 28px */
}

.article {
    margin-bottom: 2.25rem; /* 36px */
}

.post-title {
    font-size: 1.125rem; /* 18px */
    font-weight: 400;
    margin-bottom: 0.5rem; /* 8px */
}

.post-date {
    font-size: 0.875rem; /* 14px */
}

.footer a {
    display: block;
    font-size: 1.125rem; /* 18px */
    line-height: 1.6;
}

.back-link {
    display: block;
    margin-top: -1.25rem; /* pulls header gap from 28px down to 8px */
    margin-bottom: 1.75rem; /* 28px */
}

.post-body {
    font-size: 1.125rem; /* 18px */
    font-weight: 400;
    line-height: 1.5;
    margin-top: 1.75rem; /* 28px */
}

.post-body p {
    margin-bottom: 1rem; /* 16px */
}

.about-body {
    font-size: 1.125rem; /* 18px */
    font-weight: 400;
    line-height: 1.5;
}

.about-body p {
    margin-bottom: 1.75rem; /* 28px */
}

.about-links {
    font-size: 0.875rem; /* 14px */
    margin-bottom: 1.75rem; /* 28px */
}

.about-links-title {
    margin-bottom: 0.5rem; /* 8px */
}

.about-links a {
    display: block;
    margin-bottom: 0.5rem; /* 8px */
}

img {
    width: 100%;
    display: block;
}

.post-body ul,
.post-body ol {
    margin-bottom: 1rem;
    padding-left: 1.23rem;
}

.post-body hr {
    background-color: var(--background);
    margin: 2.5rem 0;
    opacity: 0.3;
}

.post-body blockquote {
    font-style: italic;
    border-left: 2px solid var(--accent);
    padding-left: 1rem;
    margin-bottom: 1.5rem;
}

.post-body p > code {
    display: inline-block;
    font-family: "Courier New", Courier, monospace;
    background: rgba(0, 0, 0, 0.08);
    padding: 0.1rem 0.5rem;
    border-radius: 5px;
    margin-bottom: 1.5rem;
}

.post-body pre {
    font-family: "Courier New", Courier, monospace;
    margin-bottom: 1.5rem;
    padding: 1rem;
    overflow-x: auto;
    background: rgba(0, 0, 0, 0.08);
    border-radius: 5px;
}

.post-body pre code {
    font-family: "Courier New", Courier, monospace;
    background: transparent;
    padding: 0;
}

